@@ -1,52 +1,23 @@
-[instance_dummy]
-module=dummy
-dummy_no_generation=no
-dummy_no_sleeping=no
-dummy_random_payload_max_size=0
-dummy_max_generated=1
-
 [instance_ip]
 module=ip
-senders=instance_response_duplicator
-ip_input_types=nsep#code,sep2
+duplicate=yes
+senders=instance_perl5
+ip_input_types=stx1,nsep#code,sep2
 ip_udp_port=3333
 ip_tcp_port=3333
 ip_array_send_tags=reply
 ip_sync_byte_by_byte=yes
 
-[instance_socket]
-module=socket
-socket_receive_rrr_message=yes
-socket_path=/tmp/rrr_test_devicemaster.sock
-
-[instance_response_duplicator]
-module=buffer
-duplicate=yes
-senders=instance_perl5
-
 [instance_perl5]
 module=perl5
-senders=instance_ip,instance_dummy,instance_socket
+duplicate=yes
+senders=instance_ip
 perl5_do_include_build_directories=yes
 perl5_file=misc/test_configs/rrr_test_devicemaster.pl
 perl5_process_sub=process
 perl5_config_sub=config
-custom_argument=yes
-
-[instance_ip_receiver]
-module=ip
-ip_udp_port=7777
-ip_tcp_port=7777
-ip_input_types=nsep#response,sep1
 
 [instance_raw]
 module=raw
-senders=instance_ip_receiver,instance_response_duplicator
+senders=instance_perl5,instance_ip
 raw_print_data=yes
-
-#[instance_journal]
-#module=journal
-#
-#[instance_mqtt_sender]
-#module=mqttclient
-#senders=instance_journal
